--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "build": "react-scripts build",
-  "start": "react-scripts start",
-  "deploy": "vercel --prod"
-},
+    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "deploy": "vercel --prod"
+  },
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@supabase/supabase-js": "^2.48.1",
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
+    "react-scripts": "^4.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,7 +36,7 @@
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
